--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Adir Elfersy</title>
-  <meta name="description" content="Adir Elfersy Protfolio Site">
-  <meta name="author" content="Adir Elfersy">
+  <title>Zvika Yamin</title>
+  <meta name="description" content="Zvika Yamin Protfolio Site">
+  <meta name="author" content="Zvika Yamin">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
     crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Aldrich' rel='stylesheet'>
@@ -28,7 +28,7 @@
 
 <body>
   <div class="container container-fixes-up aldrich-font">
-    <h1>ADIR
+    <h1>ZVIKA
     </h1>
     <h3>
       CV
@@ -44,37 +44,37 @@
               </a>
             </div>
             <div class="col-auto">
-              <a href="docs/Adir Elfersy Cv RZ.pdf">
+              <a href="docs/zyCV_2019.pdf">
               <i class="fa fa-file-pdf-o avatar-icons" aria-hidden="true"></i>
               </a>
             </div>
             <div class="col-auto">
-                <a href="docs/Adir Elfersy Cv RZ.docx">
+                <a href="docs/zyCV_2019.doc">
                 <i class="fa fa-file-word-o avatar-icons" aria-hidden="true"></i>
                 </a>
               </div>
             <div class="col-auto">
-                <a href="tel:0543151375">
+                <a href="tel:0547278884">
               <i class="fa fa-phone avatar-icons" aria-hidden="true"></i>
               </a>
             </div>
             <div class="col-auto">
-                <a href="https://github.com/adirel">
+                <a href="https://github.com/tzvikaya">
               <i class="fa fa-github avatar-icons" aria-hidden="true"></i>
               </a>
             </div>
             <div class="col-auto">
-                <a href="https://linkedin.com/in/adir-elfersy-6a81b931">
+                <a href="https://www.linkedin.com/in/zvikayamin/">
               <i class="fa fa-linkedin-square avatar-icons" aria-hidden="true"></i>
               </a>
             </div>
              <div class="col-auto">
-                <a href="https://api.whatsapp.com/send?phone=972543151375">
+                <a href="https://api.whatsapp.com/send?phone=972547258884">
               <i class="fa fa-whatsapp avatar-icons" aria-hidden="true"></i>
               </a>
             </div>
             <div class="col-auto">
-                <a href="mailto:adir.elfersy@gmail.com?Subject=I'm%20Interested%20In%20You" target="_top">
+                <a href="mailto:zvika.yamin@gmail.com?Subject=I'm%20Interested%20In%20You" target="_top">
               <i class="fa fa-envelope-o avatar-icons" aria-hidden="true"></i>
               </a>
             </div>
@@ -85,61 +85,51 @@
         </div>
         <div class="col-8 right-content aldrich-font">
           <h1> I'M
-            <span style="color: #4392F1">ADIR ELFERSY</span>
+            <span style="color: #4392F1">Zvika Yamin</span>
           </h1>
-          <h2>Senior Developer
-            <span style="color: #173753"> &</span> Team Leader</h2>
-          <p>Works as a team leader at Malam-Payroll. In my area of ​​responsibility I've, 5 developers and one QA. I run a
-            complete SCRUM method, under TFS, and plan the workflow with the systems analysts , emphasizing & work breakdown, architecture,
-            and team leadership at tight schedule, from the UX \ UI process to the customer delivery & testing process. I
-            strongly believe in the promotion and personal attitude of every team member professionally, transparency between
-            team members and equality.</p>
+          <h2>Programmer 
+            <span style="color: #173753"> &</span> Pm</h2>
+          <p>Independent, capable of learning fast and self-discipline, a creative person, curious and love to work in dynamic and creative environment.
+            Team player and easy to work with. Knowledge and experience in both information systems, presence and implementation of complex software systems
+            </p>
             <div class="row justify-content-center">
                 <div class="col-auto fixed-col">
                   <a href="#">
-                    <img class="avatar-prof" src="img/net.png" data-toggle="tooltip" data-placement="bottom" title="7 years experience" aria-hidden="true">
+                    <img class="avatar-prof" src="img/net.png" data-toggle="tooltip" data-placement="bottom" title="3 years experience" aria-hidden="true">
                   </a>
                 </div>
                 <div class="col-auto fixed-col">
                     <a href="#">
-                      <img class="avatar-prof" src="img/angular.png" data-toggle="tooltip" data-placement="bottom" title="4 years experience" aria-hidden="true">
+                      <img class="avatar-prof" src="img/angular.png" data-toggle="tooltip" data-placement="bottom" title="2 years experience" aria-hidden="true">
                     </a>
                   </div>
                 <div class="col-auto fixed-col">
                     <a href="#">
-                        <img class="avatar-prof" src="img/html.png" data-toggle="tooltip" data-placement="bottom" title="7 years experience" aria-hidden="true">
+                        <img class="avatar-prof" src="img/html.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
                       </a>
                 </div>
                 <div class="col-auto fixed-col">
                     <a href="#">
-                        <img class="avatar-prof" src="img/js.jpg" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
+                        <img class="avatar-prof" src="img/js.jpg" data-toggle="tooltip" data-placement="bottom" title="2 years experience" aria-hidden="true">
                       </a>
                 </div>
                 <div class="col-auto fixed-col">
                     <a href="#">
-                        <img class="avatar-prof" src="img/css.jpg" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
+                        <img class="avatar-prof" src="img/css.jpg" data-toggle="tooltip" data-placement="bottom" title="2 years experience" aria-hidden="true">
+                      </a>
+                </div>
+
+                <div class="col-auto fixed-col">
+                    <a href="#">
+                        <img class="avatar-prof" src="img/git.png" data-toggle="tooltip" data-placement="bottom" title="2 years experience" aria-hidden="true">
                       </a>
                 </div>
                 <div class="col-auto fixed-col">
                     <a href="#">
-                        <img class="avatar-prof" src="img/cordova.png" data-toggle="tooltip" data-placement="bottom" title="7 years experience" aria-hidden="true">
+                        <img class="avatar-prof" src="img/npm.png" data-toggle="tooltip" data-placement="bottom" title="2 years experience" aria-hidden="true">
                       </a>
                 </div>
-                <div class="col-auto fixed-col">
-                    <a href="#">
-                        <img class="avatar-prof" src="img/git.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
-                      </a>
-                </div>
-                <div class="col-auto fixed-col">
-                    <a href="#">
-                        <img class="avatar-prof" src="img/npm.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
-                      </a>
-                </div>
-                <div class="col-auto fixed-col">
-                    <a href="#">
-                        <img class="avatar-prof" src="img/scrum.png" data-toggle="tooltip" data-placement="bottom" title="3 years experience" aria-hidden="true">
-                      </a>
-                </div>
+
                 <div class="col-auto fixed-col">
                     <a href="#">
                         <img class="avatar-prof" src="img/oracle.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
@@ -148,7 +138,7 @@
               </div>
           <div class="row justify-content-center">
             <div class="col small-text">
-              You can use my profile template for free by forking my repository <a href="https://github.com/adirel/adirel.github.io"><i class="fa fa-github avatar-icons" aria-hidden="true"></i> </a>
+              You can use my profile template for free by forking my repository <a href="https://github.com/tzvikaya/tzvikaya.github.io"><i class="fa fa-github avatar-icons" aria-hidden="true"></i> </a>
             </div>
           </div>
         </div>
