--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h2>Programmer 
             <span style="color: #173753"> &</span> Pm</h2>
           <p>Independent, capable of learning fast and self-discipline, a creative person, curious and love to work in dynamic and creative environment.
-            Team player and easy to work with. Knowledge and experience in both information systems, presence and implementation of complex software systems
+            Team player and easy to work with. Knowledge and experience in both information systems, attendance and implementation of complex software systems
             </p>
             <div class="row justify-content-center">
                 <div class="col-auto fixed-col">
@@ -240,45 +240,44 @@
           <h4 class="modal-title">Experience & projects</h4>
         </div>
         <div class="modal-body">
-          <div class="row">
+          <div class="row fixmarg">
             <div class="col-2">
                 <img class="avatar-prof" src="img/scrum.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
             </div>
             <div class="col-10">
-              Team leader and SCRUM(agile) master. (tfs)
+              Information Systems Analysis (2 Years)
             </div>
           </div>
-          <div class="row">
+          <div class="row fixmarg">
               <div class="col-2">
                   <img class="avatar-prof" src="img/net.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
               </div>
               <div class="col-10">
-                Highly experienced in net/core framework development, infrastracture, enviorments & third party/nugets use.
+                Implementing attendance systems in development languages such as .net and attendance management projects & Knowledge and experience in ASP.NET
               </div>
             </div>
-            <div class="row">
+            <div class="row fixmarg">
                 <div class="col-2">
                     <img class="avatar-prof" src="img/angular.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
                 </div>
                 <div class="col-10">
-                  3 years experience in developing angular 5-7 applications, enviorments, deployments and code maintenance.
+                  Angular Knowledge and Experience Version 2 and above
                 </div>
               </div>
-          <div class="row">
+          <div class="row fixmarg">
               <div class="col-2">
-                  <img class="avatar-prof" src="img/cordova.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
+                  <img class="avatar-prof" src="img/clock.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
               </div>
               <div class="col-10">
-                Multiple Mobile projects in cordova/ionic, crossplatform frameworks.
-                Attendance systems, Payroll applications and more.
+                Construction and operation of web-based interfaces in the field of attendance.
               </div>
             </div>
-            <div class="row">
+            <div class="row fixmarg">
                 <div class="col-2">
                     <img class="avatar-prof" src="img/oracle.png" data-toggle="tooltip" data-placement="bottom" title="5 years experience" aria-hidden="true">
                 </div>
                 <div class="col-10">
-                  Experience in various DB providers such as: Oracle 11/12, Microsoft sql, NoSql(firestore,mongo)
+                  Knowledge and experience of Oracle and Microsoft databases
                 </div>
               </div>
         </div>
