--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </a>
             </div>
             <div class="col-auto">
-                <a href="docs/zyCV_2020.doc">
+                <a href="docs/zyCV_2020z.doc">
                 <i class="fa fa-file-word-o avatar-icons" aria-hidden="true"></i>
                 </a>
               </div>
